--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
 		<title>htmlcss-responsive-layout</title>
 		<link rel="stylesheet" href="./assets/css/style.css" />
 	</head>
+    <!-- debug  -->
 	<body class="debug">
+        <!-- header  -->
 		<header>
+            <!-- title  -->
 			<div class="d-flex title">
 				<h1>Giallo Booleano</h1>
 			</div>
