--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
 				<h1>Giallo Booleano</h1>
 			</div>
 		</header>
-		<main></main>
-		<footer></footer>
+		<!-- main -->
+		<main>
+
+		</main>
+		<!-- footer -->
+		<footer>
+
+		</footer>
 	</body>
 </html>
