--- a/index.html
+++ b/index.html
@@ -18,7 +18,17 @@
 		</header>
 		<!-- main -->
 		<main>
-			
+			<div class="container">
+
+				<div class="row">
+
+					<div class="col-8">
+						<h4>DOLCI E DESSERT</h4>
+						<h3>Tiramisù</h3>
+					</div>
+					<div class="col-4"></div>
+			</div>
+
 		</main>
 		<!-- footer -->
 		<footer>
