--- a/index.html
+++ b/index.html
@@ -4,35 +4,37 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>htmlcss-responsive-layout</title>
-		<link href="https://fonts.googleapis.com/css?family=Nerko+One:regular" rel="stylesheet" />
+		<link
+			href="https://fonts.googleapis.com/css?family=Nerko+One:regular"
+			rel="stylesheet"
+		/>
 		<link rel="stylesheet" href="./assets/css/style.css" />
 	</head>
-    <!-- debug  -->
-	<body class="debug">
-        <!-- header  -->
+	<!-- debug  -->
+	<body class="deug">
+		<!-- header  -->
 		<header>
-            <!-- title  -->
+			<!-- title  -->
 			<div class="d-flex title">
 				<h1>Giallo Booleano</h1>
 			</div>
 		</header>
 		<!-- main -->
 		<main>
-			<div class="container">
-
-				<div class="row">
-
+			<div class="container bg-color-background">
+				<div class="row justify-content-between">
 					<div class="col-8">
 						<h4>DOLCI E DESSERT</h4>
 						<h3>Tiramisù</h3>
 					</div>
-					<div class="col-4"></div>
+					<div class="col-4 ">
+						<span>4.6/5</span>
+						<span class="rate">RATE</span>
+					</div>
+				</div>
 			</div>
-
 		</main>
 		<!-- footer -->
-		<footer>
-
-		</footer>
+		<footer></footer>
 	</body>
 </html>
