--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 		</header>
 		<!-- main -->
 		<main>
-			<div class="container bg-color-background">
-				<div class="row justify-content-between">
+			<div class="container ">
+				<div class="row ">
 					<div class="col-8">
 						<h4>DOLCI E DESSERT</h4>
 						<h3>Tiramisù</h3>
@@ -30,7 +30,7 @@
 					<div class="col-4 ">
 						<span>4.6/5</span>
 						<span class="rate">RATE</span>
-					</div>
+					
 				</div>
 			</div>
 		</main>
