--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		</header>
 		<!-- main -->
 		<main>
-			<div class="container ">
+			<div class="container-width ">
 				<div class="row ">
 					<div class="col-8">
 						<h4>DOLCI E DESSERT</h4>
