fix title minor

--- a/index.html
+++ b/index.html
@@ -21,16 +21,18 @@
 		</header>
 		<!-- main -->
 		<main>
-			<div class="container-width ">
-				<div class="row ">
-					<div class="col-8">
-						<h4>DOLCI E DESSERT</h4>
-						<h3>Tiramisù</h3>
+			<div class="container-width">
+				<div class="row between">
+					<div class="col-8 py-5">
+						<h4 class="d-flex ">DOLCI E DESSERT</h4>
+						<h3 class="d-flex tiramisu">Tiramisù</h3>
 					</div>
-					<div class="col-4 ">
-						<span>4.6/5</span>
-						<span class="rate">RATE</span>
-					
+					<div class="col-4 py-5 d-flex">
+						<div>
+							<div class="d-flex "><strong>4.6</strong>/5 <span class="rate">RATE</span></div>
+							
+						</div>
+					</div>
 				</div>
 			</div>
 		</main>
