--- a/index.html
+++ b/index.html
@@ -22,15 +22,31 @@
 		<!-- main -->
 		<main>
 			<div class="container-width">
-				<div class="row between">
-					<div class="col-8 py-5">
-						<h4 class="d-flex ">DOLCI E DESSERT</h4>
+				<div class="row">
+					<div class="col-8 py-3">
+						<h4 class="title-minor">DOLCI E DESSERT</h4>
 						<h3 class="d-flex tiramisu">Tiramisù</h3>
 					</div>
-					<div class="col-4 py-5 d-flex">
+					<div class="col-4 py-3 d-flex">
 						<div>
-							<div class="d-flex "><strong>4.6</strong>/5 <span class="rate">RATE</span></div>
-							
+							<div class="d-flex py-1 ">
+								<strong>4.6</strong>/5 <span class="rate">RATE</span>
+							</div>
+						</div>
+					</div>
+					<div class="col-12">
+						<img src="./assets/img/tiramisu.jpg" alt="" />
+					</div>
+				</div>
+			</div>
+			<div class="container-width py-3 bg-color-secondary">
+				<div class="container ">
+					<div class="row bg-color-secondary">
+						<div class="col-6">
+							<div class="calorie">544 Kcal</div>
+						</div>
+						<div class="col-6">
+							<div class="info">+ info</div>
 						</div>
 					</div>
 				</div>
