--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		</header>
 		<!-- main -->
 		<main>
-			<div class="container-width">
+			<div class="container-width bg-color-secondary">
 				<div class="row">
 					<div class="col-8 py-3">
 						<h4 class="title-minor">DOLCI E DESSERT</h4>
@@ -29,19 +29,23 @@
 					</div>
 					<div class="col-4 py-3 d-flex">
 						<div>
-							<div class="d-flex py-1 ">
-								<strong>4.6</strong>/5 <span class="rate">RATE</span>
+							<div class="d-flex py-1">
+								<span class="voto"><strong>4.6</strong>/5</span>
+								<span class="rate">RATE</span>
 							</div>
 						</div>
 					</div>
 					<div class="col-12">
-						<img src="./assets/img/tiramisu.jpg" alt="" />
+						<div>
+							<img width="100%" src="./assets/img/tiramisu.jpg" alt="" />
+						</div>
 					</div>
 				</div>
 			</div>
-			<div class="container-width py-3 bg-color-secondary">
-				<div class="container ">
-					<div class="row bg-color-secondary">
+			<div class="container-width py-3 bg-color-background ">
+				<div class="row">
+					<div class="container ">
+					<div class="row between bg-color-secondary">
 						<div class="col-6">
 							<div class="calorie">544 Kcal</div>
 						</div>
@@ -50,6 +54,7 @@
 						</div>
 					</div>
 				</div>
+			</div>
 			</div>
 		</main>
 		<!-- footer -->
