insert space social

--- a/index.html
+++ b/index.html
@@ -42,19 +42,55 @@
 					</div>
 				</div>
 			</div>
-			<div class="container-width py-3 bg-color-background ">
+			<div class="container-width py-3 bg-color-background">
 				<div class="row">
-					<div class="container ">
-					<div class="row between bg-color-secondary">
-						<div class="col-6">
-							<div class="calorie">544 Kcal</div>
+					<div class="container">
+						<div class="row between bg-color-secondary">
+							<div class="col-6 py-3">
+								<div class="calorie">544 Kcal</div>
+							</div>
+							<div class="col-6 py-3">
+								<div class="info"><strong>+ info</strong></div>
+							</div>
+							<div class="col-12 py-3">
+								<hr />
+								<div class="d-flex py-1">
+									<span class="food">Vegetariano</span>
+								</div>
+							</div>
 						</div>
-						<div class="col-6">
-							<div class="info">+ info</div>
+					</div>
+					<div class="container">
+						<div class="row start py-3">
+							<div class="col-12">
+								<p>Difficoltà: <strong>Facile</strong></p>
+							</div>
+							<div class="col-12 py-1">
+								<p>Tempo:<strong>40 min</strong></p>
+							</div>
+							<div class="col-12 py-1">
+								<p>Porzione per: <strong>8 persone</strong></p>
+							</div>
+							<div class="col-12 py-1">
+								<p>Costo: <strong>contenuto</strong></p>
+							</div>
+							<div class="col-12 py-1">
+								<p><strong>Note</strong>: + 2 ore di riposo in frigo</p>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
+			<div class="container-width bg-color-secondary py-3">
+				<div class="row around">
+					<div class="social">ciao</div>
+					<div class="social">ciao</div>
+					<div class="social">ciao</div>
+					<div class="social">ciao</div>
+					<div class="social">ciao</div>
+
+
+				</div>
 			</div>
 		</main>
 		<!-- footer -->
