--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					</div>
 					<div class="col-12">
 						<div>
-							<img width="100%" src="./assets/img/tiramisu.jpg" alt="" />
+							<img width="100%" src="./assets/img/image (10).png" alt="" />
 						</div>
 					</div>
 				</div>
@@ -77,17 +77,18 @@
 							<div class="col-12 py-1">
 								<p><strong>Note</strong>: + 2 ore di riposo in frigo</p>
 							</div>
+							
 						</div>
 					</div>
 				</div>
 			</div>
 			<div class="container-width bg-color-secondary py-3">
 				<div class="row around">
-					<div class="social">ciao</div>
-					<div class="social">ciao</div>
-					<div class="social">ciao</div>
-					<div class="social">ciao</div>
-					<div class="social">ciao</div>
+					<div class="social">f</div>
+					<div class="social">t</div>
+					<div class="social">i</div>
+					<div class="social">p</div>
+					<div class="social">y</div>
 
 
 				</div>
