--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>htmlcss-responsive-layout</title>
 		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+			integrity="sha512-ChsD8NqbvTACJtM0A5oUN/OG89K3oE7tY7Ja+tFk/c/9xC6GYmRNVRuCPIHGbwzmDhOGEtQie7dO/PHlprw55g=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer"
+		/>
+		<link
 			href="https://fonts.googleapis.com/css?family=Nerko+One:regular"
 			rel="stylesheet"
 		/>
@@ -77,7 +84,6 @@
 							<div class="col-12 py-1">
 								<p><strong>Note</strong>: + 2 ore di riposo in frigo</p>
 							</div>
-							
 						</div>
 					</div>
 				</div>
@@ -89,8 +95,6 @@
 					<div class="social">i</div>
 					<div class="social">p</div>
 					<div class="social">y</div>
-
-
 				</div>
 			</div>
 		</main>
