fix hr last section

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 							<div class="col-6 py-3">
 								<div class="info"><strong>+ info</strong></div>
 							</div>
-							<div class="col-12 py-3">
+							<div class="ingredient col-12 py-3">
 								<hr />
 								<div class="d-flex py-1">
 									<span class="food">Vegetariano</span>
@@ -95,6 +95,17 @@
 					<div class="social">i</div>
 					<div class="social">p</div>
 					<div class="social">y</div>
+				</div>
+			</div>
+
+			<div class="presentation container-width bg-color-secondary py-3">
+				<div class="row">
+					<h2 class="py-3">PRESENTATION</h2>
+					<div class="col-12"></div>
+					<hr />
+					<div class="col-12 py-3">
+						<img src="./assets/img/tiramisu.jpg" alt="" />
+					</div>
 				</div>
 			</div>
 		</main>
