fix and complete last section

--- a/index.html
+++ b/index.html
@@ -97,15 +97,28 @@
 					<div class="social">y</div>
 				</div>
 			</div>
-
 			<div class="presentation container-width bg-color-secondary py-3">
 				<div class="row">
-					<h2 class="py-3">PRESENTATION</h2>
-					<div class="col-12"></div>
-					<hr />
-					<div class="col-12 py-3">
+					<h2 class="col-12">PRESENTATION</h2>
+					<div class="col-12 py-1"></div>
+					<div class="col-12"><hr /></div>
+					<div class="tiramisu col-12 py-3">
 						<img src="./assets/img/tiramisu.jpg" alt="" />
 					</div>
+					<p class="col-12">
+						Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam modi
+						voluptates aut porro cupiditate illo ab provident, consequuntur
+						doloribus dignissimos eos. Repellat ea aspernatur asperiores
+						mollitia illum <strong>explicabo</strong>  ad voluptatem minima fuga aut nobis
+						perspiciatis consequatur voluptatum, eligendi est doloremque odit
+						ipsam enim! Praesentium odio eligendi vitae odit labore dolores sint
+						soluta nihil. <strong>Beatae possimus</strong> harum ipsum nihil esse autem. Vero
+						eaque debitis dicta? <strong>Totam iure expedita </strong>tempore quidem, similique
+						odit ducimus dolores deserunt aspernatur, praesentium quae, magnam
+						molestias qui beatae dicta iste nulla officiis. Nostrum quaerat
+						laudantium, consequuntur tempora corrupti rerum aliquid eveniet
+						voluptatibus voluptates laboriosam porro? Ipsam, alias!
+					</p>
 				</div>
 			</div>
 		</main>
