--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
 			</div>
 			<div class="container-width bg-color-secondary py-3">
 				<div class="row around">
-					<div class="social">f</div>
-					<div class="social">t</div>
-					<div class="social">i</div>
-					<div class="social">p</div>
-					<div class="social">y</div>
+					<i class="fab fa-facebook"></i>
+					<i class="fab fa-facebook"></i>
+					<i class="fab fa-facebook"></i>
+					<i class="fab fa-facebook"></i>
+					<i class="fab fa-facebook"></i>
 				</div>
 			</div>
 			<div class="presentation container-width bg-color-secondary py-3">
