--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<div class="row">
 					<div class="col-8 py-3">
 						<h4 class="title-minor">DOLCI E DESSERT</h4>
-						<h3 class="d-flex tiramisu">Tiramisù</h3>
+						<h3 class="d-flex  tiramisu">Tiramisù</h3>
 					</div>
 					<div class="col-4 py-3 d-flex">
 						<div>
@@ -102,7 +102,7 @@
 					<h2 class="col-12">PRESENTATION</h2>
 					<div class="col-12 py-1"></div>
 					<div class="col-12"><hr /></div>
-					<div class="tiramisu col-12 py-3">
+					<div class="tiramisu-img col-12 py-3">
 						<img src="./assets/img/tiramisu.jpg" alt="" />
 					</div>
 					<p class="col-12">
