--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<link rel="stylesheet" href="./assets/css/style.css" />
 	</head>
 	<!-- debug  -->
-	<body class="deug">
+	<body class="debug">
 		<!-- header  -->
 		<header>
 			<!-- title  -->
@@ -30,11 +30,11 @@
 		<main>
 			<div class="container-width bg-color-secondary">
 				<div class="row">
-					<div class="col-8 py-3">
+					<div class="col-8 py-3 ">
 						<h4 class="title-minor">DOLCI E DESSERT</h4>
-						<h3 class="d-flex  tiramisu">Tiramisù</h3>
+						<h3 class="d-flex tiramisu">Tiramisù</h3>
 					</div>
-					<div class="col-4 py-3 d-flex">
+					<div class="justify-content-flex-end col-4 py-3 d-flex">
 						<div>
 							<div class="d-flex py-1">
 								<span class="voto"><strong>4.6</strong>/5</span>
@@ -109,15 +109,17 @@
 						Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam modi
 						voluptates aut porro cupiditate illo ab provident, consequuntur
 						doloribus dignissimos eos. Repellat ea aspernatur asperiores
-						mollitia illum <strong>explicabo</strong>  ad voluptatem minima fuga aut nobis
-						perspiciatis consequatur voluptatum, eligendi est doloremque odit
-						ipsam enim! Praesentium odio eligendi vitae odit labore dolores sint
-						soluta nihil. <strong>Beatae possimus</strong> harum ipsum nihil esse autem. Vero
-						eaque debitis dicta? <strong>Totam iure expedita </strong>tempore quidem, similique
-						odit ducimus dolores deserunt aspernatur, praesentium quae, magnam
-						molestias qui beatae dicta iste nulla officiis. Nostrum quaerat
-						laudantium, consequuntur tempora corrupti rerum aliquid eveniet
-						voluptatibus voluptates laboriosam porro? Ipsam, alias!
+						mollitia illum <strong>explicabo</strong> ad voluptatem minima fuga
+						aut nobis perspiciatis consequatur voluptatum, eligendi est
+						doloremque odit ipsam enim! Praesentium odio eligendi vitae odit
+						labore dolores sint soluta nihil.
+						<strong>Beatae possimus</strong> harum ipsum nihil esse autem. Vero
+						eaque debitis dicta? <strong>Totam iure expedita </strong>tempore
+						quidem, similique odit ducimus dolores deserunt aspernatur,
+						praesentium quae, magnam molestias qui beatae dicta iste nulla
+						officiis. Nostrum quaerat laudantium, consequuntur tempora corrupti
+						rerum aliquid eveniet voluptatibus voluptates laboriosam porro?
+						Ipsam, alias!
 					</p>
 				</div>
 			</div>
