insert query header 768

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 		<link rel="stylesheet" href="./assets/css/style.css" />
 	</head>
 	<!-- debug  -->
-	<body class="debug">
+	<body class="deug">
 		<!-- header  -->
 		<header>
 			<!-- title  -->
-			<div class="d-flex title">
+			<div class="d-flex title title2">
 				<h1>Giallo Booleano</h1>
 			</div>
 		</header>
@@ -32,7 +32,7 @@
 				<div class="row">
 					<div class="col-8 py-3 ">
 						<h4 class="title-minor">DOLCI E DESSERT</h4>
-						<h3 class="d-flex tiramisu">Tiramisù</h3>
+						<h3 class="d-flex tiramisu">Tiramisù<span class="tradition">(Dolce Tradizionale)</span></h3>
 					</div>
 					<div class="justify-content-flex-end col-4 py-3 d-flex">
 						<div>
