--- a/index.html
+++ b/index.html
@@ -69,19 +69,19 @@
 					</div>
 					<div class="container">
 						<div class="row start py-3">
-							<div class="col-12">
+							<div class="col-12 py-1 col-md-4">
 								<p>Difficoltà: <strong>Facile</strong></p>
 							</div>
-							<div class="col-12 py-1">
+							<div class="col-12 py-1 col-md-4">
 								<p>Tempo:<strong>40 min</strong></p>
 							</div>
-							<div class="col-12 py-1">
+							<div class="col-12 py-1 col-md-4">
 								<p>Porzione per: <strong>8 persone</strong></p>
 							</div>
-							<div class="col-12 py-1">
+							<div class="col-12 py-1 col-md-4">
 								<p>Costo: <strong>contenuto</strong></p>
 							</div>
-							<div class="col-12 py-1">
+							<div class="col-12 py-1 col-md-4">
 								<p><strong>Note</strong>: + 2 ore di riposo in frigo</p>
 							</div>
 						</div>
