fix icon media large

--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>htmlcss-responsive-layout</title>
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+			integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer"
+		/>
 		<link
 			href="https://fonts.googleapis.com/css?family=Nerko+One:regular"
 			rel="stylesheet"
@@ -24,9 +30,11 @@
 		<main>
 			<div class="container-width bg-color-secondary">
 				<div class="row">
-					<div class="col-8 py-3 ">
+					<div class="col-8 py-3">
 						<h4 class="title-minor">DOLCI E DESSERT</h4>
-						<h3 class="d-flex tiramisu">Tiramisù<span class="tradition">(Dolce Tradizionale)</span></h3>
+						<h3 class="d-flex tiramisu">
+							Tiramisù<span class="tradition">(Dolce Tradizionale)</span>
+						</h3>
 					</div>
 					<div class="justify-content-flex-end col-4 py-3 d-flex">
 						<div>
@@ -84,11 +92,11 @@
 			</div>
 			<div class="container-width bg-color-secondary py-3">
 				<div class="row around">
-					<i class="social facebook fab fa-facebook"></i>
-					<i class="social twitter fab fa-twitter"></i>
-					<i class="social instagram fab fa-instagram"></i>
-					<i class="social pinterest fab fa-pinterest"></i>
-					<i class="social youtube fab fa-youtube"></i>
+					<i class="social facebook fab fa-facebook social-lg"></i>
+					<i class="social twitter fab fa-twitter social-lg"></i>
+					<i class="social instagram fab fa-instagram social-lg"></i>
+					<i class="social pinterest fab fa-pinterest social-lg"></i>
+					<i class="social youtube fab fa-youtube social-lg"></i>
 				</div>
 			</div>
 			<div class="presentation container-width bg-color-secondary py-3">
