--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@
 					<i class="social pinterest fab fa-pinterest social-lg"></i>
 					<i class="social youtube fab fa-youtube social-lg"></i>
 				</div>
+				<div class="banner py-1">
+					<img src="./assets/img/banner.png" alt="">
+				</div>
 			</div>
 			<div class="presentation container-width bg-color-secondary py-3">
 				<div class="row">
