--- a/index.html
+++ b/index.html
@@ -92,14 +92,24 @@
 			</div>
 			<div class="container-width bg-color-secondary py-3">
 				<div class="row around">
-					<i class="social facebook fab fa-facebook social-lg"></i>
-					<i class="social twitter fab fa-twitter social-lg"></i>
-					<i class="social instagram fab fa-instagram social-lg"></i>
-					<i class="social pinterest fab fa-pinterest social-lg"></i>
-					<i class="social youtube fab fa-youtube social-lg"></i>
+					<a href="#">
+						<i class="social facebook fab fa-facebook social-lg"><span class="text-social">facebook</span></i>
+					</a>
+					<a href="#">
+						<i class="social twitter fab fa-twitter social-lg"><span class="text-social">Twitter</span></i>
+					</a>
+					<a href="#">
+						<i class="social instagram fab fa-instagram social-lg"><span class="text-social">instagram</span></i>
+					</a>
+					<a href="#">
+						<i class="social pinterest fab fa-pinterest social-lg"><span class="text-social">Pinterest</span></i>
+					</a>
+					<a href="#">
+						<i class="social youtube fab fa-youtube social-lg"><span class="text-social">Youtube</span></i>
+					</a>
 				</div>
 				<div class="banner py-1">
-					<img src="./assets/img/banner.png" alt="">
+					<img src="./assets/img/banner.png" alt="" />
 				</div>
 			</div>
 			<div class="presentation container-width bg-color-secondary py-3">
