--- a/index.html
+++ b/index.html
@@ -93,19 +93,29 @@
 			<div class="container-width bg-color-secondary py-3">
 				<div class="row around">
 					<a href="#">
-						<i class="social facebook fab fa-facebook social-lg"><span class="text-social">facebook</span></i>
+						<i class="social facebook fab fa-facebook social-lg"
+							><span class="text-social">facebook</span></i
+						>
 					</a>
 					<a href="#">
-						<i class="social twitter fab fa-twitter social-lg"><span class="text-social">Twitter</span></i>
+						<i class="social twitter fab fa-twitter social-lg"
+							><span class="text-social">Twitter</span></i
+						>
 					</a>
 					<a href="#">
-						<i class="social instagram fab fa-instagram social-lg"><span class="text-social">instagram</span></i>
+						<i class="social instagram fab fa-instagram social-lg"
+							><span class="text-social">instagram</span></i
+						>
 					</a>
 					<a href="#">
-						<i class="social pinterest fab fa-pinterest social-lg"><span class="text-social">Pinterest</span></i>
+						<i class="social pinterest fab fa-pinterest social-lg"
+							><span class="text-social">Pinterest</span></i
+						>
 					</a>
 					<a href="#">
-						<i class="social youtube fab fa-youtube social-lg"><span class="text-social">Youtube</span></i>
+						<i class="social youtube fab fa-youtube social-lg"
+							><span class="text-social">Youtube</span></i
+						>
 					</a>
 				</div>
 				<div class="banner py-1">
@@ -115,27 +125,30 @@
 			<div class="presentation container-width bg-color-secondary py-3">
 				<div class="row">
 					<h2 class="col-12">PRESENTATION</h2>
-					<div class="col-12 py-1"></div>
-					<div class="col-12"><hr /></div>
-					<div class="tiramisu-img col-12 py-3">
-						<img src="./assets/img/tiramisu.jpg" alt="" />
+					<div class="col-12 py-1">
+						<div class="col-12">
+							<hr />
+							<div class="tiramisu-img col-12 py-3">
+								<img src="./assets/img/tiramisu.jpg" alt="" />
+							</div>
+							<p class="col-12 py-3">
+								Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam
+								modi voluptates aut porro cupiditate illo ab provident,
+								consequuntur doloribus dignissimos eos. Repellat ea aspernatur
+								asperiores mollitia illum <strong>explicabo</strong> ad
+								voluptatem minima fuga aut nobis perspiciatis consequatur
+								voluptatum, eligendi est doloremque odit ipsam enim! Praesentium
+								odio eligendi vitae odit labore dolores sint soluta nihil.
+								<strong>Beatae possimus</strong> harum ipsum nihil esse autem.
+								Vero eaque debitis dicta?
+								<strong>Totam iure expedita </strong>tempore quidem, similique
+								odit ducimus dolores deserunt aspernatur, praesentium quae,
+								magnam molestias qui beatae dicta iste nulla officiis. Nostrum
+								quaerat laudantium, consequuntur tempora corrupti rerum aliquid
+								eveniet voluptatibus voluptates laboriosam porro? Ipsam, alias!
+							</p>
+						</div>
 					</div>
-					<p class="col-12">
-						Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam modi
-						voluptates aut porro cupiditate illo ab provident, consequuntur
-						doloribus dignissimos eos. Repellat ea aspernatur asperiores
-						mollitia illum <strong>explicabo</strong> ad voluptatem minima fuga
-						aut nobis perspiciatis consequatur voluptatum, eligendi est
-						doloremque odit ipsam enim! Praesentium odio eligendi vitae odit
-						labore dolores sint soluta nihil.
-						<strong>Beatae possimus</strong> harum ipsum nihil esse autem. Vero
-						eaque debitis dicta? <strong>Totam iure expedita </strong>tempore
-						quidem, similique odit ducimus dolores deserunt aspernatur,
-						praesentium quae, magnam molestias qui beatae dicta iste nulla
-						officiis. Nostrum quaerat laudantium, consequuntur tempora corrupti
-						rerum aliquid eveniet voluptatibus voluptates laboriosam porro?
-						Ipsam, alias!
-					</p>
 				</div>
 			</div>
 		</main>
