--- a/index.html
+++ b/index.html
@@ -126,12 +126,12 @@
 				<div class="row">
 					<h2 class="col-12">PRESENTATION</h2>
 					<div class="col-12 py-1">
-						<div class="col-12">
+						<div>
 							<hr />
-							<div class="tiramisu-img col-12 py-3">
+							<div class="tiramisu-img py-3">
 								<img src="./assets/img/tiramisu.jpg" alt="" />
 							</div>
-							<p class="col-12 py-3">
+							<p class="py-3">
 								Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam
 								modi voluptates aut porro cupiditate illo ab provident,
 								consequuntur doloribus dignissimos eos. Repellat ea aspernatur
