--- a/index.html
+++ b/index.html
@@ -9,12 +9,8 @@
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
 			integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
 			crossorigin="anonymous"
-			referrerpolicy="no-referrer"
-		/>
-		<link
-			href="https://fonts.googleapis.com/css?family=Nerko+One:regular"
-			rel="stylesheet"
-		/>
+			referrerpolicy="no-referrer" />
+		<link href="https://fonts.googleapis.com/css?family=Nerko+One:regular" rel="stylesheet" />
 		<link rel="stylesheet" href="./assets/css/style.css" />
 	</head>
 	<!-- debug  -->
@@ -32,9 +28,7 @@
 				<div class="row">
 					<div class="col-8 py-3">
 						<h4 class="title-minor">DOLCI E DESSERT</h4>
-						<h3 class="d-flex tiramisu">
-							Tiramisù<span class="tradition">(Dolce Tradizionale)</span>
-						</h3>
+						<h3 class="d-flex tiramisu">Tiramisù<span class="tradition">(Dolce Tradizionale)</span></h3>
 					</div>
 					<div class="justify-content-flex-end col-4 py-3 d-flex">
 						<div>
@@ -93,29 +87,19 @@
 			<div class="container-width bg-color-secondary py-3">
 				<div class="row around">
 					<a href="#">
-						<i class="social facebook fab fa-facebook social-lg"
-							><span class="text-social">facebook</span></i
-						>
+						<i class="social facebook fab fa-facebook social-lg"><span class="text-social">facebook</span></i>
 					</a>
 					<a href="#">
-						<i class="social twitter fab fa-twitter social-lg"
-							><span class="text-social">Twitter</span></i
-						>
+						<i class="social twitter fab fa-twitter social-lg"><span class="text-social">Twitter</span></i>
 					</a>
 					<a href="#">
-						<i class="social instagram fab fa-instagram social-lg"
-							><span class="text-social">instagram</span></i
-						>
+						<i class="social instagram fab fa-instagram social-lg"><span class="text-social">instagram</span></i>
 					</a>
 					<a href="#">
-						<i class="social pinterest fab fa-pinterest social-lg"
-							><span class="text-social">Pinterest</span></i
-						>
+						<i class="social pinterest fab fa-pinterest social-lg"><span class="text-social">Pinterest</span></i>
 					</a>
 					<a href="#">
-						<i class="social youtube fab fa-youtube social-lg"
-							><span class="text-social">Youtube</span></i
-						>
+						<i class="social youtube fab fa-youtube social-lg"><span class="text-social">Youtube</span></i>
 					</a>
 				</div>
 				<div class="banner py-1">
@@ -132,20 +116,15 @@
 								<img src="./assets/img/tiramisu.jpg" alt="" />
 							</div>
 							<p class="py-3">
-								Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam
-								modi voluptates aut porro cupiditate illo ab provident,
-								consequuntur doloribus dignissimos eos. Repellat ea aspernatur
-								asperiores mollitia illum <strong>explicabo</strong> ad
-								voluptatem minima fuga aut nobis perspiciatis consequatur
-								voluptatum, eligendi est doloremque odit ipsam enim! Praesentium
-								odio eligendi vitae odit labore dolores sint soluta nihil.
-								<strong>Beatae possimus</strong> harum ipsum nihil esse autem.
-								Vero eaque debitis dicta?
-								<strong>Totam iure expedita </strong>tempore quidem, similique
-								odit ducimus dolores deserunt aspernatur, praesentium quae,
-								magnam molestias qui beatae dicta iste nulla officiis. Nostrum
-								quaerat laudantium, consequuntur tempora corrupti rerum aliquid
-								eveniet voluptatibus voluptates laboriosam porro? Ipsam, alias!
+								Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam modi voluptates aut porro cupiditate
+								illo ab provident, consequuntur doloribus dignissimos eos. Repellat ea aspernatur asperiores mollitia
+								illum <strong>explicabo</strong> ad voluptatem minima fuga aut nobis perspiciatis consequatur
+								voluptatum, eligendi est doloremque odit ipsam enim! Praesentium odio eligendi vitae odit labore dolores
+								sint soluta nihil. <strong>Beatae possimus</strong> harum ipsum nihil esse autem. Vero eaque debitis
+								dicta? <strong>Totam iure expedita </strong>tempore quidem, similique odit ducimus dolores deserunt
+								aspernatur, praesentium quae, magnam molestias qui beatae dicta iste nulla officiis. Nostrum quaerat
+								laudantium, consequuntur tempora corrupti rerum aliquid eveniet voluptatibus voluptates laboriosam
+								porro? Ipsam, alias!
 							</p>
 						</div>
 					</div>
